--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "fs": "0.0.1-security",
     "google-spreadsheet": "^3.3.0",
+    "node-fetch": "^2.6.7",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
@@ -21,6 +23,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/style-resources": "^1.2.1",
     "sass": "^1.53.0",
     "sass-loader": "^10.3.1"
