--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
+    "@studio-freight/lenis": "^0.2.10",
     "core-js": "^3.19.3",
     "fs": "0.0.1-security",
     "google-spreadsheet": "^3.3.0",
