--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nuxtjs/axios": "^5.13.6",
     "@studio-freight/lenis": "^0.2.10",
     "core-js": "^3.19.3",
+    "embla-carousel": "^7.0.3",
     "fs": "0.0.1-security",
     "google-spreadsheet": "^3.3.0",
+    "gsap": "^3.11.3",
     "node-fetch": "^2.6.7",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
