--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@studio-freight/lenis": "^0.2.10",
     "core-js": "^3.19.3",
     "embla-carousel": "^7.0.3",
@@ -26,17 +27,17 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "sass": "^1.53.0",
-    "sass-loader": "^10.3.1",
     "@babel/eslint-parser": "^7.16.3",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^10.3.1"
   }
 }
